--- a/packages/ui/styles/globals.css
+++ b/packages/ui/styles/globals.css
@@ -18,7 +18,7 @@
     --muted-foreground: 0 0% 65%;
     --accent: 197 26% 11%;
     --accent-foreground: 0 0% 98%;
-    --destructive: 0 63% 37%;
+    --destructive: 0, 100%, 63%;
     --destructive-foreground: 0 0% 98%;
     --border: 202 27% 14%;
     --input: 202 27% 14%;
