feat(web): Last bets preview in dashboard

--- a/packages/ui/styles/globals.css
+++ b/packages/ui/styles/globals.css
@@ -19,9 +19,12 @@
     --accent: 197 26% 11%;
     --accent-foreground: 0 0% 98%;
     --destructive: 0 100% 63%;
+    --destructive-background: 0 56% 35%;
     --destructive-foreground: 0 0% 98%;
-    --success: 123 38% 57%;
-    --success-foreground: 0 0% 5%;
+    --success: 123 38% 33%;
+    --success-foreground: 0 0% 98%;
+    --info: 212 89% 42%;
+    --info-foreground: 0 0% 98%;
     --border: 202 27% 14%;
     --input: 202 27% 14%;
     --ring: 146 67% 54%;
